redhat/rhoai/v3.5/base/04-mcp-infra/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mcp-system
  annotations:
    openshift.io/display-name: "MCP Gateway"
---
apiVersion: v1
kind: Namespace
metadata:
  name: ocp-mcp-server
  labels:
    opendatahub.io/dashboard: "true"
  annotations:
    openshift.io/display-name: "MCP Server"
